# toysql

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docs/: ast.md  datatypes.md  index.md  integer.rst  integers.md  internal.md  reading.md  reference.md  todo.md
docs/source/: btrees.rst  cells.rst  conf.py  datatypes.rst  file_format.rst  index.rst  records.rst
tests/: conftest.py  fixtures.py  test_btree.py  test_compiler.py  test_datatypes.py  test_e2e.py  test_fmt.py  test_lexer.py  test_page.py  test_pager.py  test_parser.py  test_planner.py  test_record.py  test_repl.py  test_table.py  test_tree.py  test_vm.py  test_vm2.py
tests/snapshots/: snap_test_btree.py
toysql/: btree.py  compiler.py  constants.py  datatypes.py  exceptions.py  lexer.py  page.py  pager.py  parser.py  planner.py  record.py  repl.py  statement.py  t.py  table.py  tree.py  vm.py  vmV1.py
