[tool.poetry]
name = "toysql"
version = "0.1.0"
description = "A toy database"
authors = ["Craig Mulligan <hey@hobochild.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
