[tool.poetry]
name = "toysql"
version = "0.1.0"
description = "A toy database"
authors = ["Craig Mulligan <hey@hobochild.com>"]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.dev-dependencies]
mkdocstrings = "^0.19.0"
mkdocs = "^1.3.1"
pytest = "^7.1.1"
pyright = "^1.1.247"
snapshottest = "^0.6.0"
mkdocstrings-python = "^0.7.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
