[project]
name = "toysql"
version = "0.1.0"
description = "A toy database"
authors = [
    {name = "Craig Mulligan", email = "git@craigmulligan.com"},
]
dependencies = []
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.1.1",
    "pyright<2.0.0,>=1.1.247",
    "snapshottest<1.0.0,>=0.6.0",
    "sphinx>=6.1.3",
    "black>=23.1.0",
    "sphinx-autobuild>=2021.3.14",
]

[tool.pdm.build]
includes = []
[tool.pdm.scripts]
test = "pytest"
pyright = "pyright"
black_check = "black . --check"
black = "black ."
ci = {composite = ["pyright", "black_check", "test"]}
docs = "sphinx-autobuild docs/source docs/build/html"


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
log_cli = true

[tool.pyright]
extraPaths = ["__pypackages__/3.10/lib/"]
exclude = ["__pypackages__"]
